# MummyMaze

./: .gitignore  CMakeLists.txt  LICENSE  MummyN04.cpp  PLANCHART.md  README.md  run_game.bat
assets/mazes/: maze1.txt  mazeplay.txt
include/Core/: Game.hpp  GameData.hpp  Maze.hpp  MazeGenerator.hpp  TimeControl.hpp
include/Entities/: Mummy.hpp  Player.hpp
include/GUI/: Button.hpp
include/States/: CustomizeState.hpp  GameState.hpp  HowtoplayState.hpp  MainMenuState.hpp  ModeSelectState.hpp  SettingState.hpp  State.hpp
src/Core/: Game.cpp  GameData.cpp  Maze.cpp  MazeGenerator.cpp  TimeControl.cpp
src/Entities/: Mummy.cpp  Player.cpp
src/GUI/: Button.cpp
src/States/: CustomizeState.cpp  GameState.cpp  HowtoplayState.cpp  MainMenuState.cpp  ModeSelectState.cpp  SettingState.cpp
